--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="coffee shops, espresso, baked goods, practicum, library, and good vibes"
     />
-    <link rel="stylesheets" href="../pages/index.css" />
+    <link rel="stylesheets" href="./pages/index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
@@ -23,7 +23,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="../images/logo_coffee_shop.svg"
+            src="./images/logo_coffee_shop.svg"
             alt="Practicum library Logo"
             class="logo"
           />
