--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="coffee shops, espresso, baked goods, practicum, library, and good vibes"
     />
-    <link rel="stylesheets" href="./pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
@@ -27,16 +27,24 @@
             alt="Practicum library Logo"
             class="logo"
           />
-          <div class="nav__links">
-            <a class="nav__link" href="#menu">Menu</a>
-            <a class="nav__link" href="#recipes">Recipes</a>
-            <a class="nav__link" href="#book-a-table">Book a table</a>
-            <a class="nav__link" href="#contacts">Contacts</a>
-          </div>
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#menu">Menu</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#recipes">Recipes</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#book-a-table">Book a table</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#contacts">Contacts</a>
+            </li>
+          </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span__accent">Speciality coffee</span>
-          <span> in the Practicum Library </span>
+          <span class="span__accent">Speciality coffee</span> 
+          <span>in the Practicum Library </span>
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and<br />
@@ -49,12 +57,14 @@
         />
         <div class="header__footer">
           <div class="header__hours">
-            <p class="Header__Hours">Hours:</p>
-            <p class="Header__Hours">Monday – Friday (10:00 – 19:00)</p>
-            <p class="Header__Hours">Saturday – Sunday (11:00 – 18:00)</p>
-          </div>
-          <div class="header__address">
-            <p class="header__address">200 Success Avenue, The Town of Practicum </p>
+            <div class="header__paragraph">Hours:
+            </div>
+            <div class="Header__paragraph">Monday – Friday (10:00 – 19:00)</div>
+            <div class="Header__paragraph">Saturday – Sunday (11:00 – 18:00)</div>
+              <div class="header__paragraph">200 Success Avenue, The Town of Practicum
+              </div>
+            </div>
+          </ul>
           </div>
         </div>
       </header>
@@ -63,20 +73,36 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup. </p>
-          <div class="cards">
+          <ul class="cards">
             <div class="menu__cards">
-              <p class="card__title"> Filter</p>
-                <p class="card__list-item"> Regular (12 oz)</p>
-                  <div class="card__list-divider"> $1</div>
-                <p class="card__list-item">Large (16 oz)</p>
-                  <hr class="card__list-divider"/> $1.25
-                <div class="card__list-item"> XL (20 oz)</div>
-                  <hr class="card__list-divider" /> $1.5
-                <div class="card__list-item">Party-size (24 oz, decaf)</div> 
-                  <hr class="card__list-divider" /> $1.75
-                <div class="card__list-item">Iced Coffee (16 oz)</div>
-                  <hr class="card__list-divider" /> $1.25
-            </div>
+              <ul class="card__title"> 
+                Filter 
+                <li class="card__list-item"> 
+                  Regular (12 oz)
+                  <hr class="card__list-divider"/> 
+                  $1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz)
+                  <hr class="card__list-divider"/> 
+                  $1.25
+                </li>
+                <li class="card__list-item"> 
+                  XL (20 oz)
+                  <hr class="card__list-divider" /> 
+                  $1.5
+                </li>
+                <li class="card__list-item">
+                  Party-size (24 oz, decaf)
+                  <hr class="card__list-divider"/> 
+                  $1.75
+                </li>
+                <li class="card__list-item">
+                  Iced Coffee (16 oz)
+                  <hr class="card__list-divider"/> 
+                  $1.25
+                </li>
+              </ul>
             </div>
             <div class="card">
               <ul class="card__title">
@@ -96,7 +122,6 @@
                   <hr class="card__list-divider" />
                   $3
                 </li>
-
                 <li class="card__list-item">
                   Party-size (24 oz, decaf)
                   <hr class="card__list-divider" />
@@ -109,7 +134,7 @@
                 </li>
               </ul>
             </div>
-            <div class="card">
+            <div class="menu__card">
               <ul class="card__title">
                 Baked Goods
                 <li class="card__list-item">
@@ -152,17 +177,22 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-          <div class="recipes__video-item">
-            <iframe
-              class="recipes__iframe"
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/j6VlT_jUVPc"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
+          <div class="videos">
+            <ul class="iframe__video">
+              <li class="iframe__video iframe__video-caption">
+                <iframe
+                class="recipes__iframe"
+                 width="560"
+                 height="315"
+                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                 title="YouTube video player"
+                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                 allowfullscreen>
+                </iframe>
+            <p class="iframe__video-caption">Aeropress Recipe ~5 min</p>
+            </li>
+            <li class="iframe__video iframe__video-caption">
+              <iframe 
               class="iframe__recipes"
               width="560"
               height="315"
@@ -171,13 +201,9 @@
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
-          </div>
-          <div class="iframe__video-caption">
-            <p class="iframe__video-caption">Aeropress Recipe ~5 min</p>
-          </div>
-          <div class="iframe__video-caption">
-            <p class="iframe__video-caption">French press recipe~15 min</p>
-          </div>
+            <p class="iframe__video-caption">French press recipe ~15 min</p>
+          </li>
+        </ul>
         </section>
         <section class="reservation" id="book a table">
           <h2 class="reservation__title">Book a table</h2>
@@ -253,18 +279,20 @@
               don't sell single-use cups. But you can buy one of our reusable
               cups!
             </p>
+            <div class="about__circle"></div>
           </div>
-          <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer">
-        <div class="footer__contents" id="contacts">
-          <img
+      <footer class="footer" id="contacts">
+        <div class="footer__contents">
+          <div class="footer__content">
+            <img
             class="footer__logo"
             src="../images/practicum_logo.svg"
             alt="Practicum Logo in Letters"
-          />
-          <div class="footer__social footer__social-heading">
+            />
+          </div>
+          <div class="footer__content footer__content_type_social-heading">
             <h2 class="footer__social-heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
