--- a/index.html
+++ b/index.html
@@ -57,22 +57,19 @@
         />
         <div class="header__footer">
           <div class="header__hours">
-            <div class="header__paragraph">Hours:
-            </div>
-            <div class="Header__paragraph">Monday – Friday (10:00 – 19:00)</div>
-            <div class="Header__paragraph">Saturday – Sunday (11:00 – 18:00)</div>
-              <div class="header__paragraph">200 Success Avenue, The Town of Practicum
-              </div>
-            </div>
-          </ul>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
+            <p class="header__paragraph">200 Success Avenue, The Town of Practicum</p>
+        </div>
         </div>
       </header>
       <main class="content">
         <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
-            use biodegradable cups. All teas from our collection are $2/cup. </p>
+            use<br/> biodegradable cups. All teas from our collection are $2/cup. </p>
           <ul class="cards">
             <div class="menu__cards">
               <ul class="card__title"> 
