Afternoon update part two

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
             use<br/> biodegradable cups. All teas from our collection are $2/cup. </p>
-          <ul class="cards">
-            <div class="menu__cards">
+          <ul class="card">
+            <div class="card">
               <ul class="card__title"> 
                 Filter 
                 <li class="card__list-item"> 
@@ -101,7 +101,7 @@
                 </li>
               </ul>
             </div>
-            <div class="card">
+            <div class="menu__cards">
               <ul class="card__title">
                 Espresso
                 <li class="card__list-item">
@@ -131,7 +131,7 @@
                 </li>
               </ul>
             </div>
-            <div class="menu__card">
+            <div class="card">
               <ul class="card__title">
                 Baked Goods
                 <li class="card__list-item">
