--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </li>
               </ul>
             </div>
-            <div class="menu__cards">
+            <div class="card">
               <ul class="card__title">
                 Espresso
                 <li class="card__list-item">
