Update index.html & index.css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
             use<br/> biodegradable cups. All teas from our collection are $2/cup. </p>
-          <ul class="card">
+          <ul class="menu__cards">
             <div class="card">
               <ul class="card__title"> 
                 Filter 
