--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             use<br/> biodegradable cups. All teas from our collection are $2/cup. </p>
           <ul class="menu__cards">
             <div class="card">
-              <ul class="card__title"> 
-                Filter 
+              <h3 class="card__title">Filter</h3>
+                <ul class="card__list"> 
                 <li class="card__list-item"> 
                   Regular (12 oz)
                   <hr class="card__list-divider"/> 
@@ -102,8 +102,8 @@
               </ul>
             </div>
             <div class="card">
-              <ul class="card__title">
-                Espresso
+              <h4 class="card__title">Espresso</h4>
+              <ul class="card__list"> 
                 <li class="card__list-item">
                   Macchiato
                   <hr class="card__list-divider" />
@@ -132,8 +132,8 @@
               </ul>
             </div>
             <div class="card">
-              <ul class="card__title">
-                Baked Goods
+              <h5 class="card__title">Baked Goods</h5>
+              <ul class="card__list"> 
                 <li class="card__list-item">
                   Almond Croissant
                   <hr class="card__list-divider" />
