--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
-            use<br/> biodegradable cups. All teas from our collection are $2/cup. </p>
+            use <br/> biodegradable cups. All teas from our collection are $2/cup. </p>
           <ul class="menu__cards">
             <div class="card">
               <h3 class="card__title">Filter</h3>
@@ -179,26 +179,26 @@
               <li class="iframe__video iframe__video-caption">
                 <iframe
                 class="recipes__iframe"
-                 width="560"
-                 height="315"
+                 width="480"
+                 height="273"
                  src="https://www.youtube.com/embed/j6VlT_jUVPc"
                  title="YouTube video player"
                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                  allowfullscreen>
                 </iframe>
-            <p class="iframe__video-caption">Aeropress Recipe ~5 min</p>
+            <p class="iframe__video-caption">Aeropress recipe ~5 min</p>
             </li>
             <li class="iframe__video iframe__video-caption">
               <iframe 
               class="iframe__recipes"
-              width="560"
-              height="315"
+              width="480"
+              height="273"
               src="https://www.youtube.com/embed/st571DYYTR8"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
-            <p class="iframe__video-caption">French press recipe ~15 min</p>
+            <p class="iframe__video-caption"> French press recipe ~15 min</p>
           </li>
         </ul>
         </section>
