--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <section class="reservation" id="book a table">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
-            <fieldset class="form__fieldset">
+            <fieldset class="reservation__form">
               <label class="form__label" for="name">Name *</label>
               <input
                 class="form__input"
@@ -223,7 +223,7 @@
                 id="guests"
                 placeholder="1-8"
                 min="1"
-                max="0"
+                max="8"
                 required
               />
               <label class="form__label" for="date-time">Data & time*</label>
@@ -239,13 +239,16 @@
               <input
                 class="form__input"
                 type="email"
-                id="input-email"
+                id="your-email"
                 placeholder="email@email.com"
                 required
               />
             </fieldset>
-            <fieldset type="button" class="form__button">Book a table</fieldset>
-              <label class="form__terms" for="tos"> I agree with the terms of use</label>
+            <fieldset type="button" class="form__button">
+              <fieldset>
+                <button>Book a table</button>
+              </fieldset>
+              <label class="form__terms"> I agree with the terms of use</label>
               <input
                 class="form__checkbox"
                 type="checkbox"
