--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span__accent">Speciality coffee</span> 
+          <span class="span__accent">Speciality coffee</span>
           <span>in the Practicum Library </span>
         </h1>
         <p class="header__description">
@@ -61,49 +61,53 @@
             <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
             <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
-            <p class="header__paragraph">200 Success Avenue, The Town of Practicum</p>
-        </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Practicum
+          </p>
         </div>
       </header>
       <main class="content">
         <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
-          <p class="menu__subtitle"> We brew coffee from locally roasted, Fairtrade certified beans and
-            use <br/> biodegradable cups. All teas from our collection are $2/cup. </p>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use <br />
+            biodegradable cups. All teas from our collection are $2/cup.
+          </p>
           <ul class="menu__cards">
             <div class="card">
               <h3 class="card__title">Filter</h3>
-                <ul class="card__list"> 
-                <li class="card__list-item"> 
+              <ul class="card__list">
+                <li class="card__list-item">
                   Regular (12 oz)
-                  <hr class="card__list-divider"/> 
+                  <hr class="card__list-divider" />
                   $1
                 </li>
                 <li class="card__list-item">
                   Large (16 oz)
-                  <hr class="card__list-divider"/> 
+                  <hr class="card__list-divider" />
                   $1.25
                 </li>
-                <li class="card__list-item"> 
+                <li class="card__list-item">
                   XL (20 oz)
-                  <hr class="card__list-divider" /> 
+                  <hr class="card__list-divider" />
                   $1.5
                 </li>
                 <li class="card__list-item">
                   Party-size (24 oz, decaf)
-                  <hr class="card__list-divider"/> 
+                  <hr class="card__list-divider" />
                   $1.75
                 </li>
                 <li class="card__list-item">
                   Iced Coffee (16 oz)
-                  <hr class="card__list-divider"/> 
+                  <hr class="card__list-divider" />
                   $1.25
                 </li>
               </ul>
             </div>
             <div class="card">
               <h4 class="card__title">Espresso</h4>
-              <ul class="card__list"> 
+              <ul class="card__list">
                 <li class="card__list-item">
                   Macchiato
                   <hr class="card__list-divider" />
@@ -133,7 +137,7 @@
             </div>
             <div class="card">
               <h5 class="card__title">Baked Goods</h5>
-              <ul class="card__list"> 
+              <ul class="card__list">
                 <li class="card__list-item">
                   Almond Croissant
                   <hr class="card__list-divider" />
@@ -174,39 +178,43 @@
             Check out some recipes we've collected for your home-brewing
             convenience:
           </p>
-            <ul class="recipes__videos">
-              <li class="recipes__video-item">
-                <iframe
+          <ul class="recipes__videos">
+            <li class="recipes__video-item">
+              <iframe
                 class="recipes__iframe"
-                 width="480"
-                 height="273"
-                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
-                 title="YouTube video player"
-                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                 allowfullscreen>
-                </iframe>
-            <p class="recipes__video-caption"><span> Aeropress recipe</span> <span>~5 min</span> 
-            </p>
+                width="480"
+                height="273"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              >
+              </iframe>
+              <p class="recipes__video-caption">
+                <span> Aeropress recipe</span> <span>~5 min</span>
+              </p>
             </li>
             <li class="recipes__video-item">
-              <iframe 
-              class="recipes__iframe"
-              width="480"
-              height="273"
-              src="https://www.youtube.com/embed/st571DYYTR8"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen>
-            </iframe>
-            <p class="recipes__video-caption"><span> French press recipe</span> <span>~15 min</span>
-            </p>
-          </li>
-        </ul>
+              <iframe
+                class="recipes__iframe"
+                width="480"
+                height="273"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              >
+              </iframe>
+              <p class="recipes__video-caption">
+                <span> French press recipe</span> <span>~15 min</span>
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="reservation" id="book a table">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
-            <fieldset class="reservation__form">
+            <fieldset class="form__fieldset">
               <label class="form__label" for="name">Name *</label>
               <input
                 class="form__input"
@@ -243,20 +251,18 @@
                 placeholder="email@email.com"
                 required
               />
-            </fieldset>
-            <fieldset>
               <button class="form__button" type="button">Book a table</button>
-            </fieldset>
               <label class="form__terms">
-              <input
-                class="form__checkbox"
-                type="checkbox"
-                name="terms-of-use"
-                id="terms-of-use"
-              />
-              I agree with the terms of use
-          </label>
-            </form>
+                <input
+                  class="form__checkbox"
+                  type="checkbox"
+                  name="terms-of-use"
+                  id="terms-of-use"
+                />
+                I agree with the terms of use
+              </label>
+            </fieldset>
+          </form>
         </section>
         <section class="about" id="contacts">
           <h2 class="about__title">About the coffee shop</h2>
@@ -282,9 +288,9 @@
         <div class="footer__contents">
           <div class="footer__content">
             <img
-            class="footer__logo"
-            src="../images/practicum_logo.svg"
-            alt="Practicum Logo in Letters"
+              class="footer__logo"
+              src="../images/practicum_logo.svg"
+              alt="Practicum Logo in Letters"
             />
           </div>
           <div class="footer__content footer__content_type_social-heading">
