--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <ul class="menu__cards">
-            <div class="card">
+            <li class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -104,8 +104,8 @@
                   $1.25
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <h4 class="card__title">Espresso</h4>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -134,8 +134,8 @@
                   $10
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <h5 class="card__title">Baked Goods</h5>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -169,7 +169,7 @@
                   $0.25
                 </li>
               </ul>
-            </div>
+            </li>
           </ul>
         </section>
         <section class="recipes" id="recipes">
@@ -211,7 +211,7 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="book a table">
+        <section class="reservation" id="book-a-table">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <fieldset class="form__fieldset">
@@ -227,7 +227,6 @@
               <input
                 class="form__input"
                 type="number"
-                form="form__input"
                 id="guests"
                 placeholder="1-8"
                 min="1"
@@ -237,8 +236,6 @@
               <label class="form__label" for="date-time">Date & time*</label>
               <input
                 class="form__input"
-                type="datetime-local"
-                form="form__input"
                 id="date-time"
                 placeholder="mm/dd/yyyy --:--"
                 required
@@ -264,7 +261,7 @@
             </fieldset>
           </form>
         </section>
-        <section class="about" id="contacts">
+        <section class="about">
           <h2 class="about__title">About the coffee shop</h2>
           <div class="about__content">
             <p class="about__paragraph">
@@ -303,8 +300,8 @@
                     src="../images/facebook_white.svg"
                     alt="Facebook Icon"
                   />
-                  Facebook</a
-                >
+                  Facebook
+                </a>
               </li>
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
