--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 placeholder="mm/dd/yyyy --:--"
                 required
               />
-              <label class="form__label" for="Your-email">Your email*</label>
+              <label class="form__label" for="your-email">Your email*</label>
               <input
                 class="form__input"
                 type="email"
