--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <span>in the Practicum Library </span>
         </h1>
         <p class="header__description">
-          Welcome to our study zone! We've got the coffee to energize you and<br />
+          Welcome to our study zone! We've got the coffee to energize you and
           the cozy vibes to help you get creative.
         </p>
         <img
