--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
-            use <br />
-            biodegradable cups. All teas from our collection are $2/cup.
+            use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <ul class="menu__cards">
             <li class="card">
