--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="coffee shops, espresso, baked goods, practicum, library, and good vibes"
     />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="/pages/index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
@@ -23,7 +23,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="./images/logo_coffee_shop.svg"
+            src="/images/logo_coffee_shop.svg"
             alt="Practicum library Logo"
             class="logo"
           />
@@ -51,7 +51,7 @@
           the cozy vibes to help you get creative.
         </p>
         <img
-          src="../images/inside_coffee_shop.png"
+          src="/images/inside_coffee_shop.png"
           alt="Illustration 'Inside the Coffee Shop"
           class="header__image"
         />
@@ -296,7 +296,7 @@
                 <a href="#" class="footer__social-link">
                   <img
                     class="footer__social-icon"
-                    src="../images/facebook_white.svg"
+                    src="/images/facebook_white.svg"
                     alt="Facebook Icon"
                   />
                   Facebook
@@ -306,7 +306,7 @@
                 <a href="#" class="footer__social-link">
                   <img
                     class="footer__social-icon"
-                    src="../images/instagram_white.svg"
+                    src="/images/instagram_white.svg"
                     alt="Instagram Icon"
                   />
                   Instagram
