--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span__accent">Speciality coffee</span>
+          <span class="header__span-accent">Speciality coffee</span>
           <span>in the Practicum Library </span>
         </h1>
         <p class="header__description">
