--- a/index.html
+++ b/index.html
@@ -73,33 +73,33 @@
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
-          <ul class="menu__cards">
-            <li class="card">
+          <div class="menu__cards">
+            <div class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Regular (12 oz)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1
                 </li>
                 <li class="card__list-item">
                   Large (16 oz)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.25
                 </li>
                 <li class="card__list-item">
                   XL (20 oz)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.5
                 </li>
                 <li class="card__list-item">
                   Party-size (24 oz, decaf)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.75
                 </li>
                 <li class="card__list-item">
                   Iced Coffee (16 oz)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.25
                 </li>
               </ul>
@@ -109,27 +109,27 @@
               <ul class="card__list">
                 <li class="card__list-item">
                   Macchiato
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $2.25
                 </li>
                 <li class="card__list-item">
                   Cortado
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $2.5
                 </li>
                 <li class="card__list-item">
                   Mocha
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $3
                 </li>
                 <li class="card__list-item">
                   Party-size (24 oz, decaf)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.75
                 </li>
                 <li class="card__list-item">
                   Sunrise in the Bay Area (decaf)
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $10
                 </li>
               </ul>
@@ -139,37 +139,37 @@
               <ul class="card__list">
                 <li class="card__list-item">
                   Almond Croissant
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $2
                 </li>
                 <li class="card__list-item">
                   Banana Bread
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $1.75
                 </li>
                 <li class="card__list-item">
                   Key Lime Pie
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $3
                 </li>
                 <li class="card__list-item">
                   Blue Velvet Cake
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $3.75
                 </li>
                 <li class="card__list-item">
                   Web Cookie
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $2
                 </li>
                 <li class="card__list-item">
                   Fresh Bug'uette
-                  <hr class="card__list-divider" />
+                  <span class="card__list-divider"></span>
                   $0.25
                 </li>
               </ul>
-            </li>
-          </ul>
+            </div>
+          </div>
         </section>
         <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
@@ -181,8 +181,6 @@
             <li class="recipes__video-item">
               <iframe
                 class="recipes__iframe"
-                width="480"
-                height="273"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -196,8 +194,6 @@
             <li class="recipes__video-item">
               <iframe
                 class="recipes__iframe"
-                width="480"
-                height="273"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
