--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practicum Coffee Shop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <meta name="description" content="landing page for practicum cafe" />
     <meta name="author" content="Phillippe Louis" />
     <meta
@@ -77,7 +80,7 @@
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <div class="menu__cards">
-            <li class="card">
+            <div class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -106,8 +109,8 @@
                   $1.25
                 </li>
               </ul>
-            </li>
-            <li class="card">
+            </div>
+            <div class="card">
               <h4 class="card__title">Espresso</h4>
               <ul class="card__list">
                 <li class="card__list-item">
@@ -136,8 +139,8 @@
                   $10
                 </li>
               </ul>
-            </li>
-            <li class="card">
+            </div>
+            <div class="card">
               <h5 class="card__title">Baked Goods</h5>
               <ul class="card__list">
                 <li class="card__list-item">
