--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               alt="Practicum Logo in Letters"
             />
           </div>
-          <div class="footer__content footer__content_type_social-heading">
+          <div class="footer__social">
             <h2 class="footer__social-heading">Social Media</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
